# Auth_sprint_1

./: .gitignore  .postgres_admin_env  .postgres_auth_env  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  env_example.txt  pyproject.toml  requirements.txt  setup.cfg
api/: .env.sample  Dockerfile  main.py  nginx.conf  requirements.txt
api/api/v1/: films.py  genres.py  persons.py  response_models.py
api/core/: config.py  elastic_queries_films.py  elastic_queries_persons.py  logger.py  messages.py  models_config.py  view_decorators.py
api/db/: elastic.py  redis.py
api/models/: film.py  genre.py  person.py
api/services/: cache.py  films.py  genres.py  mixins.py  persons.py
app/: Dockerfile  README.md  app.data.sql  nginx.conf  requirements.txt
app/app/config/: settings.py  urls.py
auth/: docker-compose.tests.yml  docker-compose.yml  requirements.txt
auth/openapi/: auth.yaml
auth/src/: commands.py  config.py  main.py  settings.py
etl/: README.md  es_index.sh  etl.py  etl_check_initial_load.sh  requirements.txt
etl/etl/: backoff.py  extractor.py  loader.py  logger.py  state.py  transformer.py
openapi/: auth.yaml
src/: commands.py  config.py  main.py  manage.py  settings.py
src/app/: manage.py  response_messages.py
src/db/: db.py  db_models.py
src/keys/: cert.pem  key.pem
src/tests/: Dockerfile  requirements.txt
tests/functional/: .env.sample  Dockerfile  conftest.py  docker-compose.api-in-docker.yml  docker-compose.functional-tests-in-docker.yml  docker-compose.yml  requirements.txt  settings.py
(+43 files in other folders)
